translate into English from Chinese site

--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<header></header>
+<header>
+</header>
+
 <body>
+  <h1>COCO demo</h1>
+
+  <div id="like_button_container"></div>
+
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+
+  <!-- Load our React component. -->
+  <script src="like_button.js"></script>
   
 </body>
 
