fix (old) index.html

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
   <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
 
   <!-- Load our React component. -->
-  <script src="like_button.js"></script>
-  
+  <script src="js/like_button.js"></script>
+
 </body>
 
 <!--
-Just need to adapt from these sources:
+This is an old stub trying to use React.js
 
-https://www.pygit2.org/branches.html
-
-https://js.devexpress.com/Demos/WidgetsGallery/Demo/DataGrid/CollaborativeEditing/Vue/GreenMist/
-
+I wanted to adapt from these sources:
+	https://www.pygit2.org/branches.html
+	https://js.devexpress.com/Demos/WidgetsGallery/Demo/DataGrid/CollaborativeEditing/Vue/GreenMist/
 -->
