new-Github-users, bilingual

--- a/business-proposal-EN.html
+++ b/business-proposal-EN.html
@@ -20,9 +20,16 @@ collaboratively edited by our team.</p>
 <h3>Table of Contents</h3>
 
 <ul style="list-style-type:disc">
-	<li>Usage</li>
-	<li>Business Analysis</li>
-	<li>blah</li>
+	<li>Executive Summary</li>
+	<li>Story of the Name "Snow Crossing"</li>
+	<li>Usage of Our App</li>
+	<li>Business Model</li>
+	<li>Market(s) of Operations</li>
+	<li>SWOT Analysis</li>
+	<li>Our Team</li>
+	<li>The products or services offered.</li>
+	<li>Marketing</li>
+	<li>Financial Plan</li>
 </ul>
 
 <hr>
