Transfer images from China side

--- a/business-plan.html
+++ b/business-plan.html
@@ -332,7 +332,7 @@ YKY (甄景贤), independent AGI researcher from Hong Kong.  I want to live fore
 
 <section style="clear:left; margin-bottom:30px;">
 <div style="float:left; vertical-align:top;">
-	<img src="images/谢新法-3.jpg" style="width:200px; margin:20px;">
+	<img src="images/谢新法.jpg" style="width:200px; margin:20px;">
 </div>
 <div lang="zh" style="overflow:auto;">
 谢新法，“美味不用等” 创始人兼 CEO
@@ -401,8 +401,8 @@ Dueeihraws, a strong advocate for racial equality and global egalitarianism, Pro
 
 <hr>
 
-<h2 lang="zh" id="financing">融资</h2>
-<h2 lang="en" id="financing">Financing</h2>
+<h2 lang="zh" id="financing">财务计划</h2>
+<h2 lang="en" id="financing">Financial Plan</h2>
 
 <p lang="zh">众筹</p>
 <p lang="en">The use of crypto-currency tokens allows more flexibilty and convenience to get funding, including crowd-funding....</p>
