can load and save ProjectGraph.JSON

--- a/project-graph.html
+++ b/project-graph.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hans">
 <head>
+	<meta charset="UTF-8">
+	<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/project-graph.css">
 	<script src="https://unpkg.com/vis-data@latest/peer/umd/vis-data.min.js"></script>
