fix addNode and editNode bugs

--- a/project-graph.html
+++ b/project-graph.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-<p lang="zh">按钮：<br>Link Nodes：用滑鼠先后点击 nodes ① &amp; ②，然后按钮将它们连接。<br>
+<p lang="ZH">按钮：<br>Link Nodes：用滑鼠先后点击 nodes ① &amp; ②，然后按钮将它们连接。<br>
 Create / Update Nodes：先填写好资料，选择 node ①，然后按钮。</p>
-<p lang="en">Buttons:<br>Link Nodes: Mouse click on nodes ① &amp; then ②, then click button to
+<p lang="EN">Buttons:<br>Link Nodes: Mouse click on nodes ① &amp; then ②, then click button to
 link them.<br>
 Create / Update Nodes:  Fill out information, then choose node ①,
 and click button.</p>
@@ -70,13 +70,13 @@ and click button.</p>
 <div id="new-task-data" style="display: inline-block; vertical-align: top;">
 	<span style="font-size:30px">③</span>= New Node:<br>
 
-	<div lang="zh">
+	<div lang="ZH">
 	<label>工作名称：</label><br>
-	<input type="text" id="TaskNameZH"><br>
+	<input type="text" id="TaskNameZH" value=""><br>
 	</div>
 
 	<label>Task name:</label><br>
-	<input type="text" id="TaskNameEN"><br>
+	<input type="text" id="TaskNameEN" value=""><br>
 
 	<label>Status:</label><br>
 	<input type="radio" id="in-progress" name="status" value="in-progress">
