--- a/new-Github-users.html
+++ b/new-Github-users.html
@@ -14,17 +14,17 @@
 <img src="images/crossing-the-snow-2.jpg">
 
 <div>
-<h1 lang="zh" style="display:inline-block;">渡过雪原 &mdash; Github 新使用者 指南</h1>
-<h1 lang="en" style="display:inline-block;">Snow Crossing &mdash; Guide to New Github Users</h1>
+<h1 lang="ZH" style="display:inline-block;">渡过雪原 &mdash; Github 新使用者 指南</h1>
+<h1 lang="EN" style="display:inline-block;">Snow Crossing &mdash; Guide to New Github Users</h1>
 <button id="switch-lang" style="margin-left:100px; font-size:20px;">中文 / English</button>
 </div>
 
 <hr>
 
-<h2 lang="zh">如何注册 GitHub</h2>
-<h2 lang="en">How to register GitHub</h2>
+<h2 lang="ZH">如何注册 GitHub</h2>
+<h2 lang="EN">How to register GitHub</h2>
 
-	<ul lang="zh" style="list-style-type:disc">
+	<ul lang="ZH" style="list-style-type:disc">
 		<li>Visit <a href="https://www.github.com">https://www.github.com</a></li>
 		<li>注册户口（请自行按指示完成这步）</li>
 		<li>制造个人密码：</li>
@@ -40,7 +40,7 @@
 		</ul>
 	</ul>
 
-	<ul lang="en" style="list-style-type:disc">
+	<ul lang="EN" style="list-style-type:disc">
 		<li>Visit <a href="https://www.github.com">https://www.github.com</a></li>
 		<li>Register for an account (please follow their web site's instructions
 		to complete this step)</li>
