--- a/project-graph.html
+++ b/project-graph.html
@@ -80,11 +80,11 @@ and click button.</p>
 
 	<label>Status:</label><br>
 	<input type="radio" id="in-progress" name="status" value="in-progress">
-	<label for="in-progress">in progress</label><br>
+	<label class="colorKey" for="in-progress">in progress</label><br>
 	<input type="radio" id="finished" name="status" value="finished">
-	<label for="finished">finished</label><br>
+	<label class="colorKey" for="finished">finished</label><br>
 	<input type="radio" id="paused" name="status" value="paused">
-	<label for="pause">paused</label><br>
+	<label class="colorKey" for="paused">paused</label><br>
 
 	<label disabled>Expected tokens</label>
 	<input type="number" id="ExpTokens" style="width:7em;" disabled><br>
