start with empty graph

--- a/project-graph.html
+++ b/project-graph.html
@@ -8,17 +8,13 @@
 	<script src="https://unpkg.com/vis-data@latest/peer/umd/vis-data.min.js"></script>
 	<script src="https://unpkg.com/vis-network@latest/peer/umd/vis-network.min.js"></script>
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	<script src="js/ProjectGraph-data.js"></script>
 	<script src="js/project-graph.js" defer></script>
 </head>
 
 <body>
-<p lang="ZH">按钮：<br>Link Nodes：用滑鼠先后点击 nodes ① &amp; ②，然后按钮将它们连接。<br>
-Create / Update Nodes：先填写好资料，选择 node ①，然后按钮。</p>
-<p lang="EN">Buttons:<br>Link Nodes: Mouse click on nodes ① &amp; then ②, then click button to
-link them.<br>
-Create / Update Nodes:  Fill out information, then choose node ①,
-and click button.</p>
+<p lang="ZH">Link Nodes：用滑鼠先后点击 nodes ① &amp; ②，然后按钮将它们连接。</p>
+<p lang="EN">Link Nodes: Mouse click on nodes ① &amp; then ②, then click button to
+link them.</p>
 
 <table style="display:inline-block;">
 <tr style="text-align:center; height:16px;">
